--- a/public/contact/views/home.html
+++ b/public/contact/views/home.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" media="screen" type="text/css" href="{{root}}/vwf/view/editorview/css/alertify.core.css" />
 	<link rel="stylesheet" media="screen" type="text/css" href="{{root}}/vwf/view/editorview/css/alertify.default.css" />
 	<script type="text/javascript" src="{{root}}/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="{{root}}/vwfDataManager.svc/getanalytics.js"></script>
 	<style>
 		body{
 
