Passport google integration

--- a/public/contact/views/login.html
+++ b/public/contact/views/login.html
@@ -59,7 +59,8 @@
 			<fieldset>
 				<legend style="padding-bottom:5px;">{{#translate}}Log in{{/translate}}</legend>
                 <a href="/contact/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span>Facebook login</a>
-                <a href="/contact/auth/twitter" class="btn btn-primary"><span class="fa fa-facebook"></span>Sign in with Twitter</a>
+                <a href="/contact/auth/google" class="btn btn-primary"><span class="fa fa-facebook"></span>Google login</a>
+                <a href="/contact/auth/twitter" class="btn btn-primary"><span class="fa fa-facebook"></span>Twitter login</a>
                 <br/><br/>
 				<div class="col-md-10" style="margin:0 auto;float:none;">
 					<input type='text' id='txtusername' placeholder='{{#translate}}Username{{/translate}}' class="form-control" /><br/>
