Adding support for Your Priorities ideas

--- a/support/client/lib/vwf/view/editorview/menus.html
+++ b/support/client/lib/vwf/view/editorview/menus.html
@@ -105,7 +105,8 @@
 		  <li><a  id="MenuCreateCylinder">Cylinder</a></li>
 		  <li><a  id="MenuCreateCone">Cone</a></li>
 		  <li><a  id="MenuCreateText">Text</a></li>
-		  <li><a  id="MenuCreateTorus">Torus</a></li>
+          <li><a  id="MenuCreateTorus">Torus</a></li>
+		  <li><a  id="MenuCreateIdea">Idea</a></li>
 		</ul>
 	</li>
      <li><a id="MenuShapes" >Shapes</a>
