--- a/public/contact/views/avatar.html
+++ b/public/contact/views/avatar.html
@@ -64,7 +64,7 @@ var buf = new Uint32Array(1);
 		vwfPortalModel.saveStatus("Saving...");
 		$.ajax({
 			type: 'POST',
-			url:  root + '/vwfDataManager.svc/Profile?UID='+UID,
+			url:  root + '/vwfDataManager.svc/Profile',
 			data: JSON.stringify(vwfPortalModel.profile),
 			contentType: "application/json; charset=utf-8",
 			success: function(){
