Added a home page for netfundur

--- a/public/contact/views/home.html
+++ b/public/contact/views/home.html
@@ -166,8 +166,8 @@ function center()
     <div class="row">
         <div class="span12">
         <div id="logo_text" style="text-align: center;">
-            <h2>Your Priorities</h2>
-            <h3>Contact - Active Citizen 3D</h3>
+            <h2>Your Priorities 3D</h2>
+            <h3>Contact</h3>
             <p>
                 This is a prototype alpha stage service by the Citizens Foundation in Iceland.
             </p>
