--- a/public/contact/views/ircChatLayout.html
+++ b/public/contact/views/ircChatLayout.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" media="screen" type="text/css" href="{{root}}/vwf/view/editorview/css/alertify.default.css" />
 	
 	<style>
+		body {		background-color:#fff; }
 	</style>
 	<!--[if !IE 7]>
 	<style type="text/css">
@@ -17,10 +18,12 @@
     <title>Betri hverfi Netspjall</title>
 
 	<script type="text/javascript" src="{{root}}/js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="{{root}}/js/knockout-2.3.0.js"></script>
+	<script type="text/javascript" src="{{root}}/js/jquery.rwdImageMaps.min.js"></script>
+  <script type="text/javascript" src="{{root}}/js/knockout-2.3.0.js"></script>
 	<script type="text/javascript" src="{{root}}/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="{{root}}/vwf/view/editorview/sha256.js"></script>
 	<script type="text/javascript" src="{{root}}/js/moment.min.js"></script>
+
 	<script type="text/javascript">var root = '{{root}}';</script>
     <script type="text/javascript" src="{{root}}/js/model.js"></script>
 	<script type="text/javascript" src="{{root}}/vwfDataManager.svc/getanalytics.js"></script>
