--- a/public/contact/views/ircChat.html
+++ b/public/contact/views/ircChat.html
@@ -19,7 +19,7 @@
   </div>
   <div id="irc-root" style="width:100%;position:absolute;bottom:0px;top:80px;">
     <div id="no3d" style="padding:7px;background-color:#F8CECE;color:#222;cursor:pointer;display:none;border-bottom: 1px solid #faa;border-top: 1px solid #faa;">Því miður virkar 3D ekki í þínum vafra. Fyrir sumar tölvur virkar Firefox betur en Chrome. Hér er textaútgáfan.</div>
-    <div style="width:20%;height:100%;float:left;">
+    <div id="youTubeVideo" style="width:20%;height:100%;float:left;">
       <iframe src="//www.youtube.com/embed/NUlU_FcMRl4" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
     </div>
     <div id="irc-placeholder" style="height:100%;width:80%;float:right;"></div>
@@ -245,6 +245,13 @@
     var ircChannelName = "#"+getParameterByName("ircChannel").replace(/ /g, "_");
     var iframeTxt = '<iframe src="https://irc.yrpri.org:7778/?nick='+ircUserName+'_?'+ircChannelName+'" style="border:0;width:100%;height:100%;"></iframe>';
     $('#irc-placeholder').html(iframeTxt);
+    if ($(window).width()<800) {
+      $("#youTubeVideo").hide();
+      $("#irc-placeholder").css("width","100%");
+    } else {
+      $("#youTubeVideo").show();
+    }
+    
     if (getParameterByName("no3d")) {
       $("#no3d").show();
     }
