--- a/public/contact/views/ircChat.html
+++ b/public/contact/views/ircChat.html
@@ -1,20 +1,30 @@
 <div>
   <div id="header-root" style="width:100%;padding-left:15px;position:absolute;top:0px;left:0px;background-color:#fff;">
     <div id="header-br-link" style="width:30%;float:left;">
-      <a href="/contact/allWorlds/0"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
+      <a href="/contact/allWorlds/0">
+        <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
     </div>
-    <div id="header-movement" style="width:10%;float:left;">
+    <div style="width:10%;float:left;">
       <img id="openHelp" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_question.png" heigh="75"/>
     </div>
     <div id="header-new-idea" style="width:20%;padding-bottom:20px;padding-top:20px;float:left;">
       <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
     </div>
-    <div id="header-sm" style="width:30%;padding-bottom:20px;padding-top:10px;float:left;color:#326ba8;">
-      <h2>Laugardalur 2015</h2>
+    <div id="header-sm" style="width:40%;padding-bottom:20px;padding-top:10px;float:left;color:#326ba8;">
+      <h2>Laugardalur</h2>
     </div>
-    <div id="header-sm" style="width:10%;padding-bottom:20px;padding-top:10px;float:right;color:#000;">
-      Facebook Like<br>
-      <a id="3dWorld" href="#" onclick="go3D();">3D Útgáfa</a>
+  </div>
+  <div id="header-root-mobile" style="width:100%;padding-left:15px;position:absolute;top:0px;left:0px;background-color:#fff;display:none;">
+    <div id="header-br-link-mobile" style="width:20%;float:left;">
+      <a href="/contact/allWorlds/0">
+        <img id="smallHeaderImage" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo_small.png" heigh="75"/>
+      </a>
+    </div>
+    <div id="header-new-idea-mobile" style="width:80%;padding-bottom:12px;padding-top:12px;float:left;">
+      <center>
+        <div style="padding-bottom:5px;"><b>Laugardalur</b><br></div>
+        <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
+      </center>
     </div>
   </div>
   <div id="irc-root" style="width:100%;position:absolute;bottom:0px;top:80px;">
@@ -251,7 +261,15 @@
     } else {
       $("#youTubeVideo").show();
     }
-    
+
+    if ($(window).width()<500) {
+      $("#header-root").hide();
+      $("#header-root-mobile").show();
+    } else {
+      $("#header-root").show();
+      $("#header-root-mobile").hide();
+    }
+
     if (getParameterByName("no3d")) {
       $("#no3d").show();
     }
