--- a/public/contact/views/ircChat.html
+++ b/public/contact/views/ircChat.html
@@ -9,6 +9,7 @@
     </div>
     <div id="header-new-idea" style="width:20%;padding-bottom:20px;padding-top:20px;float:left;">
       <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
+      <a id="3dWorld" href="#" onclick="go3D();">3D Útgáfa</a>
     </div>
     <div id="header-sm" style="width:40%;padding-bottom:20px;padding-top:10px;float:left;color:#326ba8;">
       <h2>Laugardalur</h2>
