--- a/public/contact/views/home.html
+++ b/public/contact/views/home.html
@@ -94,11 +94,7 @@
 			text-shadow: 1px 1px 5px black;
 			
 		}
-		.ActionButton
-		{
-			float:left;
-			width:95%;
-		}
+
 		.thinheader
 		{
 			text-align: center;
@@ -106,6 +102,8 @@
 		}
 
 	</style>
+	<script type="text/javascript" src="{{root}}/js/cookies.js"></script>
+	<script type="text/javascript" src="{{root}}/js/jquery.rwdImageMaps.min.js"></script>
 	<script type="text/javascript">
 	
 
@@ -133,12 +131,16 @@ function center()
 
 	$(document).ready(function(){
 
+		$(".langLi").click(function(){
+			var lang = $(this).attr('lang');
+			docCookies.setItem('i18next',lang, null, '/', null, null);
+			window.location.reload();
+		});
+		$('img[usemap]').rwdImageMaps();
 		center();
 		$(document.body).css('opacity','1');
 		$(document.body).css('background-position-x','-300px');
 		$(document.body).css('transition','opacity 1.5s ease-in, background-position-x 30s');
-
-
 	})
 
 	</script>
@@ -151,75 +153,81 @@ function center()
 </head>
 <body style="overflow:hidden">
 
-<div id='content' class='bodypanel'>
+<div class='bodypanel'>
     <div class="row">
-        <div class="span12">
-            <div id="logo_image">
-                <a href="/contact">
-                    <div style=" float:left;margin-bottom:5px !important;padding-left:272px;width:550px;">
-                        <img src="/contact/img/yrpri_logo.png">
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="span12">
-        <div id="logo_text" style="text-align: center;">
-            <h2>Your Priorities 3D</h2>
-            <h3>Contact</h3>
-            <p>
-                This is a prototype alpha stage service by the Citizens Foundation in Iceland.
-            </p>
-        </div>
-    </div>
-    </div>
-		<div>
-		<div class="" style="">
-		
-		{{#sessionData}}
-		<div class="buttonContainer">
-		<a class="ActionButton" style="" href="./createNew/0"><div class="ActionButtonlabel">Create</div><div class="ActionButtonsmalllabel">Build a world</div></a>
-		</div>
-		{{/sessionData}}
-		{{^sessionData}}
-		<div class="buttonContainer">
-		<a class="ActionButton" style="" href="./createNotLoggedIn"><div class="ActionButtonlabel">Create</div><div class="ActionButtonsmalllabel">Build a world</div></a>
-		</div>
-		{{/sessionData}}
-		<div class="buttonContainer">
-		<a class="ActionButton" style="" href="./featuredWorlds/0"><div class="ActionButtonlabel">Explore</div><div class="ActionButtonsmalllabel">Browse all public worlds</div></a>
-		</div>
-		<div class="buttonContainer">
-		<a class="ActionButton" style="" href="https://github.com/rbjarnason/contact"><div class="ActionButtonlabel">Contribute</div><div class="ActionButtonsmalllabel">Edit the code or report a bug</div></a>
-		</div>
-	</div>
+
+			<style>
+				img[usemap] {
+					border: none;
+					height: auto;
+					max-width: 100%;
+					width: auto;
+					opacity: 0.95;
+				}
+			</style>
+			
+			<div id="infopage">
+				<h1>{{#translate}}Choose a neighborhood to chat in{{/translate}}</h1>
+				<img border="0" height="477" src="https://betrireykjavik.is/assets/betrihverfi_forsida.png" usemap="#Map" width="670" style="margin-left:auto;margin-right:auto;">
+				<map id="Map" name="Map">
+					<area alt="Vesturbær" p
+								coords="90,271,115,211,113,199,101,210,86,199,91,186,86,183,97,159,92,151,97,140,105,142,109,132,108,129,115,118,108,110,111,102,118,100,139,100,127,62,147,61,147,56,124,53,122,50,103,53,77,81,59,108,3,112,67,232,2,251,3,269"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Miðborg"
+								coords="182,142,193,113,211,112,212,98,148,98,140,100,116,100,109,109,115,116,107,142,98,140,93,150,98,157,88,182,92,183,88,198,100,207,132,183,164,193,161,196"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Hlíðar"
+								coords="182,144,143,235,153,275,143,277,138,284,138,288,155,287,154,314,204,315,226,296,223,256,222,227,240,179,241,153,239,132,200,135"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Háaleiti og Bústaðir"
+								coords="241,178,222,229,229,312,259,352,328,352,373,318,366,296,354,288,353,266,346,260,286,239,290,219,296,211,278,186,262,173"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Breiðholt"
+								coords="365,333,352,377,351,405,275,409,274,426,353,427,356,456,371,469,395,478,429,451,458,428,463,397,486,357,439,342"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Árbær"
+								coords="494,352,483,380,481,418,496,425,514,428,534,412,535,396,523,365,586,359,586,340,528,340,516,302,512,281,379,289,382,307,426,333"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Grafarvogur"
+								coords="496,279,372,288,357,283,381,238,407,220,398,189,390,174,394,165,414,166,443,176,442,139,471,89,452,75,450,59,556,59,603,41,607,52,596,81,548,107,533,172,548,206,532,218,506,217,502,229,488,242,475,240,470,263"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Laugardalur"
+								coords="348,259,286,239,290,220,297,210,277,183,264,173,242,177,240,130,255,110,249,101,271,86,309,73,340,88,441,87,441,102,352,104,373,130,383,161,387,183,386,205,369,213,365,250"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Grafarholt og Úlfarsárdalur"
+								coords="482,255,487,265,504,273,512,282,539,280,543,311,660,309,658,278,592,254,561,239,535,233,506,234"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+					<area alt="Kjalarnes"
+								coords="609,53,606,65,616,79,619,100,590,116,590,130,664,130,668,86,668,35,627,5,570,4,555,32,559,41,594,30,616,45,625,53"
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/" ) shape="poly"></area>
+				</map>
+				<br>
+				<div class="hide-for-nothing">
+					<a href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Árbær</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Breiðholt</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Grafarholt og Úlfarsárdalur</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Grafarvogur</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Háaleiti og Bústaðir</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Hlíðar</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Kjalarnes</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Laugardalur</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Miðborg</a> - <a
+								href="http://spjall.betrireykjavik.is/15/contact/Vh12jHHvJDvrMn0w/">Vesturbær</a> <br/> <br/>
+				</div>
+			</div>
+
+			<script type="text/javascript">
+
+			</script>
 	</div>
 
 	<div class='thinheader'>
 		
 		
-		<a class='thinheaderlink' href='{{root}}/search'>
-			{{#translate}}Worlds{{/translate}}
-		</a>
-		
+
 		{{^sessionData}}
 		<a class='thinheaderlink' href='{{root}}/signup'>
 			{{#translate}}Sign up{{/translate}}
-		</a>
-		{{/sessionData}}
-		<a class='thinheaderlink' href='{{root}}/welcome'>
-			{{#translate}}About{{/translate}}
-		</a>
-	<!--	<a class='thinheaderlink' href='{{root}}/featuredWorlds/0'>
-			{{#translate}}Worlds{{/translate}}
-		</a> -->
-		<a class='thinheaderlink' href='{{root}}/examples'>
-			{{#translate}}Examples{{/translate}}
-		</a> 
-		{{^sessionData}}
-		<a id='logina' class='thinheaderlink' href='{{root}}/login'>
-			{{#translate}}Log in{{/translate}}
 		</a>
 		{{/sessionData}}
 		{{#sessionData}}
@@ -232,6 +240,12 @@ function center()
 			{{sessionData.Username}}
 		</a>
 		{{/sessionData}}
+		<!--localization start-->
+  	<div class="langLi" lang="en"><a class='thinheaderlink' href="#">English</a></li></div>
+		<div class="langLi" lang="is"><a class='thinheaderlink' href="#">Íslenska</a></li></div>
+   	</span>
+
+		<!--localization end-->
 	</div>				
 
 	<div style='text-align:center;font-size:.75em;color:#999;margin-top:1em'>
