--- a/public/contact/views/ircChat.html
+++ b/public/contact/views/ircChat.html
@@ -1,7 +1,7 @@
 <div>
   <div id="header-root" style="width:100%;padding-left:15px;position:absolute;top:0px;left:0px;background-color:#fff;">
     <div id="header-br-link" style="width:30%;float:left;">
-      <a href="/contact/allWorlds/0">
+      <a href="/">
         <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
     </div>
     <div style="width:10%;float:left;">
@@ -17,7 +17,7 @@
   </div>
   <div id="header-root-mobile" style="width:100%;padding-left:15px;position:absolute;top:0px;left:0px;background-color:#fff;display:none;">
     <div id="header-br-link-mobile" style="width:20%;float:left;">
-      <a href="/contact/allWorlds/0">
+      <a href="/">
         <img id="smallHeaderImage" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo_small.png" heigh="75"/>
       </a>
     </div>
