--- a/public/contact/views/ircChat.html
+++ b/public/contact/views/ircChat.html
@@ -4,15 +4,14 @@
       <a href="/">
         <img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" heigh="75"/></a>
     </div>
-    <div style="width:10%;float:left;">
-      <img id="openHelp" src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_question.png" heigh="75"/>
+    <div id="header-new-idea" style="width:30%;padding-bottom:20px;padding-top:20px;float:left;">
+      <a id="newIdeaLink" target="_blank"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
     </div>
-    <div id="header-new-idea" style="width:20%;padding-bottom:20px;padding-top:20px;float:left;">
-      <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
+    <div id="header-sm" style="width:30%;padding-bottom:25px;padding-top:0px;float:left;color:#326ba8;">
+      <h2 id="hoodName"></h2>
+    </div>
+    <div id="header-sm" style="width:10%;padding-bottom:20px;padding-top:10px;float:left;color:#326ba8;">
       <a id="3dWorld" href="#" onclick="go3D();">3D Útgáfa</a>
-    </div>
-    <div id="header-sm" style="width:40%;padding-bottom:20px;padding-top:10px;float:left;color:#326ba8;">
-      <h2>Laugardalur</h2>
     </div>
   </div>
   <div id="header-root-mobile" style="width:100%;padding-left:15px;position:absolute;top:0px;left:0px;background-color:#fff;display:none;">
@@ -23,8 +22,8 @@
     </div>
     <div id="header-new-idea-mobile" style="width:80%;padding-bottom:12px;padding-top:12px;float:left;">
       <center>
-        <div style="padding-bottom:5px;"><b>Laugardalur</b><br></div>
-        <a target="_blank" href="https://betri-hverfi-laugardalur-2015.betrireykjavik.is/ideas/new"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
+        <div style="padding-bottom:5px;"><b><span id="hoodNameSmall"></span></b><br></div>
+        <a id="newIdeaLinkSmall" target="_blank"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_button_new_idea.png" heigh="75"/></a>
       </center>
     </div>
   </div>
@@ -255,6 +254,11 @@
     var ircUserName = removeDiacritics("{{user.Username}}").substring(0,28).replace(/ /g, "_");
     var ircChannelName = "#"+getParameterByName("ircChannel").replace(/ /g, "_");
     var iframeTxt = '<iframe src="https://irc.yrpri.org/?nick='+ircUserName+'_?'+ircChannelName+'" style="border:0;width:100%;height:100%;"></iframe>';
+    $("#hoodName").html(getParameterByName("hoodName"));
+    $("#hoodNameSmall").html(getParameterByName("hoodName"));
+    $("#newIdeaLink").attr("href","https://betri-hverfi-"+getParameterByName("hoodCode")+"-2015.betrireykjavik.is/ideas/new");
+    $("#newIdeaLinkSmall").attr("href","https://betri-hverfi-"+getParameterByName("hoodCode")+"-2015.betrireykjavik.is/ideas/new");
+
     $('#irc-placeholder').html(iframeTxt);
     if ($(window).width()<800) {
       $("#youTubeVideo").hide();
