--- a/public/contact/views/login.html
+++ b/public/contact/views/login.html
@@ -66,11 +66,11 @@
 
 	};
 </script>
-<div id="content" class="row" style="margin:10px auto;float:none;text-align:center;height:260px;">
+<div id="content" class="row" style="margin:10px auto;float:none;text-align:center;height:260px;padding-top:35px;">
 	<div class="col-md-5" style="margin:10px auto;float:none;text-align:center;height:260px;">
 		<form data-bind="submit:handleLoginButton" >
 			<fieldset>
-				<legend style="padding-bottom:5px;">{{#translate}}Log in{{/translate}}</legend>
+				<legend style="padding-bottom:5px;">{{#translate}}Log in with Facebook{{/translate}}</legend>
                 {{#facebookLogin}}<a href="/contact/auth/facebook" class="btn btn-primary" style="background: url(./img/signin.png);  background-position: -17px -100px;  width: 150px;  height: 50px;  border: none;  background-color: transparent;  border-radius: 9px;"><span class="fa fa-facebook"></span></a>{{/facebookLogin}}
                 {{#twitterLogin}}<span class="fa fa-facebook"></span></a>
                 <a href="/contact/auth/twitter" class="btn btn-primary" style="background: url(./img/signin.png);  
@@ -83,6 +83,10 @@
 "><span class="fa fa-facebook"></span></a>
                 {{/googleLogin}}
                 <br/><br/>
+				<br>
+				<legend style="padding-bottom:5px;">{{#translate}}Log in with email account{{/translate}}</legend>
+				<p>{{#translate}}If you do not have an email account already you need to created by clicking the link below{{/translate}}</p>
+
 				<div class="col-md-10" style="margin:0 auto;float:none;">
 					<input type='text' id='txtusername' placeholder='{{#translate}}Username{{/translate}}' class="form-control" /><br/>
 					<input type='password' id='txtpassword' placeholder='{{#translate}}Password{{/translate}}' class="form-control"/><br/>
