--- a/public/contact/views/home.html
+++ b/public/contact/views/home.html
@@ -10,6 +10,16 @@
 	<link rel="stylesheet" media="screen" type="text/css" href="{{root}}/vwf/view/editorview/css/alertify.default.css" />
 	<script type="text/javascript" src="{{root}}/js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="{{root}}/vwfDataManager.svc/getanalytics.js"></script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+						m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-7086040-12', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 	<style>
 		body{
 
