Layout and translation hacking

--- a/public/contact/views/login.html
+++ b/public/contact/views/login.html
@@ -67,6 +67,7 @@
 	};
 </script>
 <div id="content" class="row" style="margin:10px auto;float:none;text-align:center;height:260px;padding-top:35px;">
+	<a href="/"><img src="https://s3.amazonaws.com/yrpri-direct-asset/BetriHverfi/UI/header_bh_logo.png" border="0"/></a><br><br><br>
 	<div class="col-md-5" style="margin:10px auto;float:none;text-align:center;height:260px;">
 		<form data-bind="submit:handleLoginButton" >
 			<fieldset>
@@ -85,7 +86,7 @@
                 <br/><br/>
 				<br>
 				<legend style="padding-bottom:5px;">{{#translate}}Log in with email account{{/translate}}</legend>
-				<p>{{#translate}}If you do not have an email account already you need to created by clicking the link below{{/translate}}</p>
+				<p>{{#translate}}If you do not have an email account already you need to create one by clicking the link below{{/translate}}</p>
 
 				<div class="col-md-10" style="margin:0 auto;float:none;">
 					<input type='text' id='txtusername' placeholder='{{#translate}}Username{{/translate}}' class="form-control" /><br/>
