--- a/public/contact/views/home.html
+++ b/public/contact/views/home.html
@@ -23,7 +23,7 @@
 		body{
 
 			overflow: hidden;
-			background-image: url(./img/background.png);
+			background-color: #fff;
 			background-size: 2220px;
 			background-position-x: 0px;
 			opacity: 0;
@@ -33,7 +33,7 @@
 			
 			.bodypanel
 			{
-				width:800px;
+				width:600px;
 			}
 			.buttonContainer
 			{
@@ -45,7 +45,8 @@
 			.bodypanel
 			{
 				width:100%;
-
+				margin-left: 10px;
+				margin-right: 10px;
 			}
 			.ActionButtonlabel
 			{
@@ -140,8 +141,10 @@ function center()
 
 	$(document).ready(function(){
 
+		docCookies.setItem('i18next',"is", null, '/', null, null);
 		$(".langLi").click(function(){
 			var lang = $(this).attr('lang');
+			alert(lang);
 			docCookies.setItem('i18next',lang, null, '/', null, null);
 			window.location.reload();
 		});
@@ -158,10 +161,13 @@ function center()
 		#wrapper {display:table;height:100%}
 	</style>
 	<![endif]-->
-    <title>Your Priorities Contact</title>
+    <title>Betri hverfi netspjall</title>
 </head>
 <body style="overflow:hidden">
-
+<center>
+	<div style="margin-left:auto;margin-right:auto;width:100%;"><img src="https://s3.amazonaws.com/better-reykjavik-paperclip-production/sub_instances/top_banners/000/000/012/icon_full/BR_Header_new8.png?1412530254" border="0">
+</center>
+</div>
 <div class='bodypanel'>
     <div class="row">
 
@@ -174,9 +180,11 @@ function center()
 					opacity: 0.95;
 				}
 			</style>
-			
+
+
 			<div id="infopage">
 				<h1>{{#translate}}Choose a neighborhood to chat in{{/translate}}</h1>
+				<p>Betri hverfi hugmyndasöfnun er nú í gangi í 4 skiptið og er opin til 7. nóvember og 300 milljónir í boði fyrir þín verkefni.</p>
 				<img border="0" height="477" src="https://betrireykjavik.is/assets/betrihverfi_forsida.png" usemap="#Map" width="670" style="margin-left:auto;margin-right:auto;">
 				<map id="Map" name="Map">
 					<area alt="Vesturbær" p
@@ -210,8 +218,8 @@ function center()
 								coords="609,53,606,65,616,79,619,100,590,116,590,130,664,130,668,86,668,35,627,5,570,4,555,32,559,41,594,30,616,45,625,53"
 								href="/contact/4jyEJG1ssKmZ3nH6" ) shape="poly"></area>
 				</map>
-				<br>
-				<div class="hide-for-nothing">
+				<br><br>
+				<div class="hide-for-nothing" style="text-align:center;">
 					<a href="/contact/UHC9bjMM79JtScKc">Árbær</a> - <a
 								href="/contact/pNMOH98wPlUFT432">Breiðholt</a> - <a
 								href="/contact/XzMXgrSfHBVxtjHM">Grafarholt og Úlfarsárdalur</a> - <a
@@ -235,32 +243,33 @@ function center()
 		
 
 		{{^sessionData}}
-		<a class='thinheaderlink' href='{{root}}/signup'>
+		<a class='' href='{{root}}/signup'>
 			{{#translate}}Sign up{{/translate}}
 		</a>
 		{{/sessionData}}
 		{{#sessionData}}
-		<a id='logout' class='thinheaderlink' href='{{root}}/logout'>
+		<a id='logout' class='' href='{{root}}/logout'>
 			{{#translate}}Log out{{/translate}}
 		</a>
 		{{/sessionData}}
 		{{#sessionData}}
-		<a class='thinheaderlink' href='{{root}}/user'>
+		<a class='' href='{{root}}/user'>
 			{{sessionData.Username}}
 		</a>
 		{{/sessionData}}
 		<!--localization start-->
-  	<div class="langLi" lang="en"><a class='thinheaderlink' href="#">English</a></li></div>
-		<div class="langLi" lang="is"><a class='thinheaderlink' href="#">Íslenska</a></li></div>
+		<br>
+  	<a class='langLi' lang="en" href="#">English</a>
+		<a class='langLi' lang="is" href="#">Íslenska</a>
    	</span>
 
 		<!--localization end-->
 	</div>				
 
 	<div style='text-align:center;font-size:.75em;color:#999;margin-top:1em'>
-        Open source code from <a href="https://github.com/rbjarnason/contact">contact</a>, <a href="https://github.com/adlnet/Sandbox">sandbox</a> and the <a href="https://github.com/virtual-world-framework/vwf">virtual world framework</a>
-        <br/>
-        <center>Citizens Foundation 2014</center>
+		<center><a href="http://ibuar.is/">Íbúar ses.</a></center>
+		<br/>
+        Frjálst hugbúnaður frá <a href="https://github.com/rbjarnason/contact">contact</a>, <a href="https://github.com/adlnet/Sandbox">sandbox</a> og <a href="https://github.com/virtual-world-framework/vwf">virtual world framework</a>
     </div>
 </div>
 
