Layout and translation hacking

--- a/public/contact/views/home.html
+++ b/public/contact/views/home.html
@@ -165,9 +165,12 @@ function center()
 </head>
 <body style="overflow:hidden">
 <center>
-	<div style="margin-left:auto;margin-right:auto;width:100%;"><img src="https://s3.amazonaws.com/better-reykjavik-paperclip-production/sub_instances/top_banners/000/000/012/icon_full/BR_Header_new8.png?1412530254" border="0">
+	<div style="margin-left:auto;margin-right:auto;width:100%;">
+		<a href="https://www.betrireykjavik.is/">
+			<img border="0" src="https://s3.amazonaws.com/better-reykjavik-paperclip-production/sub_instances/top_banners/000/000/012/icon_full/BR_Header_new8.png?1412530254" border="0">
+		</a>
+	</div>
 </center>
-</div>
 <div class='bodypanel'>
     <div class="row">
 
