--- a/public/contact/views/login.html
+++ b/public/contact/views/login.html
@@ -99,7 +99,7 @@
 			</fieldset>
 		</form>
 		<a href='signup' class='' style=""  value="" >{{#translate}}Sign Up{{/translate}}</a><span style="margin-left:3em" />
-		<a href='forgotPassword' class='' style=""  value="" >{{#translate}}Forgot your password?{{/translate}}</a>
+		<a href='forgotPassword' class='' style="display:none;"  value="" >{{#translate}}Forgot your password?{{/translate}}</a>
 	</div>
 </div>
 
