--- a/public/contact/views/home.html
+++ b/public/contact/views/home.html
@@ -185,6 +185,9 @@ function center()
 			<div id="infopage">
 				<h1>{{#translate}}Choose a neighborhood to chat in{{/translate}}</h1>
 				<p>Betri hverfi hugmyndasöfnun er nú í gangi í 4 skiptið og er opin til 7. nóvember og 300 milljónir í boði fyrir þín verkefni.</p>
+				<center>
+					<p><b>Netspjall 1. nóvember 2014 15:00-17:00.</b></p>
+				</center>
 				<img border="0" height="477" src="https://betrireykjavik.is/assets/betrihverfi_forsida.png" usemap="#Map" width="670" style="margin-left:auto;margin-right:auto;">
 				<map id="Map" name="Map">
 					<area alt="Vesturbær" p
