--- a/public/adl/sandbox/views/index.html
+++ b/public/adl/sandbox/views/index.html
@@ -116,7 +116,7 @@
 							</td></tr>
 						</tbody>
 					</table>
-					<a href="http://www.youtube.com/watch?v=aWRQJJnBi5c&list=PLbhwHX3OvksljQcxLkRT3YvyjgQaIY8m2" class="btn btn-default">More videos</a>
+					<a href="http://www.youtube.com/watch?v=okpOTid3lKM&list=PLbhwHX3OvksljQcxLkRT3YvyjgQaIY8m2" class="btn btn-default">More videos</a>
 				</div>
 				<div class="col-md-8">
 					<div id="ytapiplayer">
