--- a/public/contact/views/ircChat.html
+++ b/public/contact/views/ircChat.html
@@ -30,7 +30,7 @@
   <div id="irc-root" style="width:100%;position:absolute;bottom:0px;top:80px;">
     <div id="no3d" style="padding:7px;background-color:#F8CECE;color:#222;cursor:pointer;display:none;border-bottom: 1px solid #faa;border-top: 1px solid #faa;">Því miður virkar 3D ekki í þínum vafra. Fyrir sumar tölvur virkar Firefox betur en Chrome. Hér er textaútgáfan.</div>
     <div id="youTubeVideo" style="width:20%;height:100%;float:left;">
-      <iframe src="//www.youtube.com/embed/NUlU_FcMRl4" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
+      <iframe src="//www.youtube.com/embed/okpOTid3lKM?autoplay=1" frameborder="0" allowfullscreen height="100%" width="100%" style='border:0;'></iframe>
     </div>
     <div id="irc-placeholder" style="height:100%;width:80%;float:right;"></div>
   </div>
